docs-archive/apache-airflow-providers-openlineage/1.0.0/_sources/_api/airflow/providers/openlineage/extractors/manager/index.rst.txt
:py:mod:`airflow.providers.openlineage.extractors.manager`
==========================================================

.. py:module:: airflow.providers.openlineage.extractors.manager


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.extractors.manager.ExtractorManager



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.openlineage.extractors.manager.try_import_from_string



.. py:function:: try_import_from_string(string)


.. py:class:: ExtractorManager


   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`

   Class abstracting management of custom extractors.

   .. py:method:: add_extractor(operator_class, extractor)


   .. py:method:: extract_metadata(dagrun, task, complete = False, task_instance=None)


   .. py:method:: get_extractor_class(task)


   .. py:method:: extract_inlets_and_outlets(task_metadata, inlets, outlets)


   .. py:method:: convert_to_ol_dataset(obj)
      :staticmethod:


   .. py:method:: validate_task_metadata(task_metadata)



