docs-archive/apache-airflow-providers-openlineage/2.1.2/_sources/_api/airflow/providers/openlineage/extractors/manager/index.rst.txt
airflow.providers.openlineage.extractors.manager
================================================

.. py:module:: airflow.providers.openlineage.extractors.manager


Classes
-------

.. autoapisummary::

   airflow.providers.openlineage.extractors.manager.ExtractorManager


Module Contents
---------------

.. py:class:: ExtractorManager

   Bases: :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`


   Class abstracting management of custom extractors.


   .. py:attribute:: extractors
      :type:  dict[str, type[airflow.providers.openlineage.extractors.BaseExtractor]]


   .. py:attribute:: default_extractor


   .. py:method:: add_extractor(operator_class, extractor)


   .. py:method:: extract_metadata(dagrun, task, task_instance_state, task_instance=None)


   .. py:method:: get_extractor_class(task)


   .. py:method:: extract_inlets_and_outlets(task_metadata, inlets, outlets)


   .. py:method:: get_hook_lineage()
      :staticmethod:



   .. py:method:: convert_to_ol_dataset_from_object_storage_uri(uri)
      :staticmethod:



   .. py:method:: convert_to_ol_dataset_from_table(table)
      :staticmethod:



   .. py:method:: convert_to_ol_dataset(obj)
      :staticmethod:



   .. py:method:: validate_task_metadata(task_metadata)


